# declutter

./: .gitignore  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.cursor/plans/: file_triage_app_7e9f32a3.plan.md
.github/workflows/: release.yml
docs/: macos_signing.md  session_recovery_plan.md
src/: App.svelte  app.css  main.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: DeleteConfirm.svelte  FileViewer.svelte  FolderSelect.svelte  Preview.svelte  PreviewPanel.svelte  Settings.svelte  Summary.svelte
src/lib/stores/: settings.ts
src/lib/ui/: Badge.svelte  Button.svelte  Card.svelte  Kbd.svelte
