[package]
name = "folder-cleanup-swipe"
version = "0.1.0"
description = "A file triage application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["dialog-open", "fs-read-file", "path-all", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opener = { version = "0.7", features = ["reveal"] }
trash = "4.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
